[gd_scene load_steps=9 format=3 uid="uid://cuimv1niluy0g"]

[ext_resource type="Script" uid="uid://ykloavgscr6g" path="res://components/tanks/enemy4_tank.gd" id="1_b8jcn"]
[ext_resource type="Texture2D" uid="uid://bufbx8eyu1uti" path="res://resources/images/tankAll.png" id="2_b8jcn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b8jcn"]
atlas = ExtResource("2_b8jcn")
region = Rect2(259, 66, 26, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_aghuq"]
atlas = ExtResource("2_b8jcn")
region = Rect2(291, 66, 26, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_345w7"]
atlas = ExtResource("2_b8jcn")
region = Rect2(322, 67, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ub2t"]
atlas = ExtResource("2_b8jcn")
region = Rect2(354, 67, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_thf7e"]
atlas = ExtResource("2_b8jcn")
region = Rect2(291, 66, 26, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bbjt7"]
size = Vector2(28, 28)

[node name="Enemy4Tank" type="CharacterBody2D" node_paths=PackedStringArray("sprite") groups=["EnemyTank"]]
collision_layer = 64
collision_mask = 363
platform_floor_layers = 4294967188
platform_wall_layers = 107
script = ExtResource("1_b8jcn")
tankType = 5
dirImages = Array[Texture2D]([SubResource("AtlasTexture_b8jcn"), SubResource("AtlasTexture_aghuq"), SubResource("AtlasTexture_345w7"), SubResource("AtlasTexture_5ub2t")])
speed = 85.0
sprite = NodePath("Sprite2D")
metadata/_custom_type_script = "uid://o4advwl5utrg"

[node name="MoveTimer" type="Timer" parent="."]
autostart = true

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_thf7e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bbjt7")

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
